fix some stuff on safari 4????

--- a/style.css
+++ b/style.css
@@ -15,10 +15,6 @@ body {
                -14px 14px #eeff41,
                -16px 16px #f9a825,
                -18px 18px #ff5722;
-    background: linear-gradient(to right, #ef5350, #f48fb1, #7e57c2, #2196f3, #26c6da, #43a047, #eeff41, #f9a825, #ff5722);
-    -webkit-background-clip: text;
-    background-clip: text;
-    -webkit-text-fill-color: transparent;
 }
 
 #jebus {
